fix vh on ios

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 html.dark {
   background-color: rgb(15, 23, 42);
 }
+
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
